# aspiics_processing

./: .gitignore  .gitmodules  LICENSE  README.md  README.txt  aspiics_detector.py  aspiics_get_opse.py  aspiics_optics.py  calibrate_flat.ipynb  l2_config.json  l2_master.py  l3_fcorona.py  l3_merge.py  l3_polariz.2.py  main.py  notes.md  process_l2.ipynb  process_l2_batch.ipynb  process_l3_batch.ipynb  pyproject.toml
calibration-data/: README.md
l2_processor/: aspiics_detector.py  aspiics_get_opse.py  banding_denoise.py  l2_master.py  parameters.py
l3_processor/: LICENSE  README.txt  aspiics_misc.py  l3_merge.py  l3_onband.py  l3_polariz.2.py
testing/: calibrate_flat.ipynb  plot_nonlinearity.ipynb  testing_process_l2.ipynb
