[project]
name = "aspiics-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "sunkit-image>=0.6.1",
    "sunpy[all]>=7.1.0",
    "tqdm>=4.67.1",
]
